--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
           <h1>Sample "Hello, World" Application</h1>
         </td>
       </tr>
+       <tr>
+        <td>
+          <img src="images/springsource.png">
+        </td>
+        <td>
+          <h1>Sample "Hello, World" Application</h1>
+        </td>
+      </tr>
     </table>
 
     <p>This is the home page for the HelloWorld Web application. </p>
