changes are made

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <ul>
       <li>To a <a href="hello.jsp">JSP page</a>.
       <li>To a <a href="hello">servlet</a>.
+         <li>To a <a href="hello12">servlet1</a>.
     </ul>
 
   </body>
