--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>To prove that they work, you can execute either of the following links:
     <ul>
       <li>To a <a href="hello.jsp">JSP page</a>.
-      <li>To a <a href="hello">servlet</a>.
+      <li>To a <a href="hello1">servlet1</a>.
     </ul>
 
   </body>
