some changes made in master branch

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
   <head>
     <title>Sample "Hello, World" Application</title>
   </head>
-  <body bgcolor=white>
+
+<body bgcolor=white>
+<p>The HTML <span> element is an inline element that can be used as a container for text.
+
+The <span> element has no special meaning. It has no required attributes, but style and class are common.
+
+Unlike <div>, which is formatted with line breaks, the <span> element does not have any automatic formatting.
+
+When used together with CSS, the <span> element can be used to style parts of the text:</p>
 
     <table border="0" cellpadding="10">
       <tr>
